Added cache examples for local and remote cache

--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "author": "Jeroen <jeroen.meeus2@realdolmen.com>",
   "license": "MIT",
   "scripts": {
-    "event_loop" : "node src/1_event_loop/index.js",
-    "multi_core" : "node src/2_cluster_mode/index.js",
-    "pm2_cluster" : "pm2 start src/3_pm2/index.js -i max"
+    "event_loop": "node src/1_event_loop/index.js",
+    "multi_core": "node src/2_cluster_mode/index.js",
+    "pm2_cluster": "pm2 start src/3_pm2/index.js -i max",
+    "fib_slow": "node src/5_add_cache/index.js",
+    "fib_fast_local": "node src/5_add_cache/index_with_local_cache.js",
+    "fib_fast_remote": "node src/5_add_cache/index_with_remote_cache.js"
+  },
+  "dependencies": {
+    "redis": "^3.0.2"
   }
 }
