--- a/src/4_k8s/app.yaml
+++ b/src/4_k8s/app.yaml
@@ -1,16 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nodejs-deployment
+  name: node-app-deployment
+  labels:
+    app: node-app
 spec:
   replicas: 4
+  selector:
+    matchLabels:
+      app: node-app
   template:
     metadata:
       labels:
-        app: nodejs
+        app: node-app
     spec:
       containers:
-        - name: nodongo
-          image: IMAGE_NAME
+        - name: node-app
+          image: pinoniq/nodejs-api-example:latest
           ports:
-            - containerPort: 3000
+            - containerPort: 8080
